@@ -1,18 +1,36 @@
-import java.net.MalformedURLException;
-import java.net.*;
-import java.net.URL;
+import java.io.IOException;
+import java.net.URI;
 import java.net.http.HttpClient;
-import java.net.URLConnection;
-import java.net.HttpURLConnection;
+import java.net.http.HttpHeaders;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.time.Duration;
+
 public class RequestHandler{
 
-//create client
-public RequestHandler(){
-    try {
-        URL url = new URL("https://api.nasa.gov/planetary/apod?api_key=DEMO_KEY");
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
-    } catch (Exception e) {
-        System.out.println("Can not get URL");
+    private static final HttpClient httpClient = HttpClient.newBuilder()
+            .version(HttpClient.Version.HTTP_1_1)
+            .connectTimeout(Duration.ofSeconds(10))
+            .build();
+
+    public static void main(String[] args) throws IOException, InterruptedException {
+
+        HttpRequest request = HttpRequest.newBuilder()
+                .GET()
+                .uri(URI.create("https://na1.api.riotgames.com/lol/match/v4/matches/3722382651?api_key=RGAPI-b4f32cdd-d48c-4ead-a9dc-6b824eaf63b6"))
+                .setHeader("User-Agent", "Java 11 HttpClient Bot") // add request header
+                .build();
+
+        HttpResponse<String> response = httpClient.send(request, HttpResponse.BodyHandlers.ofString());
+
+        // print response headers
+        //HttpHeaders headers = response.headers();
+        //headers.map().forEach((k, v) -> System.out.println(k + ":" + v));
+
+
+        // print response body
+        System.out.println(response.body());
+
     }
 
 
@@ -26,10 +44,3 @@ public RequestHandler(){
 
 
 
-
-
-
-
-
-
-}
